objects/Customer_Survey_Result__c.object
<CustomObject>
    <fields>
        <fullName>Account1__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Customer Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Customer Survey Results (Customer Account)</relationshipLabel>
        <relationshipName>Customer_Survey_Results1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Additional_Feedback__c</fullName>
        <description>Commercial:
Field added as part of new Commercial Customer Survey
WW39 - 2016
PO: Miltos Vratimos</description>
        <inlineHelpText>Is there anything else that you&apos;d like to share with us?</inlineHelpText>
        <label>Additional Feedback</label>
        <length>5000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Advocacy_EPC__c</fullName>
        <description>Commercial:
Field added as part of new Commercial Customer Survey
WW39 - 2016
PO: Miltos Vratimos</description>
        <inlineHelpText>How likely are you to recommend SunPower to others? (0 = Not at all likely to 10 = Extremely likely</inlineHelpText>
        <label>Advocacy - EPC</label>
        <picklist>
            <picklistValues>
                <fullName>0</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>6</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>7</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>8</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>9</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>10</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Advocacy_Text_EPC__c</fullName>
        <description>Commercial:
Field added as part of new Commercial Customer Survey 
WW39 - 2016
PO: Miltos Vratimos</description>
        <inlineHelpText>Why did you give that rating??</inlineHelpText>
        <label>Advocacy Text - EPC</label>
        <length>2000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Advocacy_for_Partner_Comments_EN__c</fullName>
        <description>English translation.</description>
        <inlineHelpText>English Translation</inlineHelpText>
        <label>Advocacy for Partner Comments - EN</label>
        <length>2500</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Advocacy_for_Partner_Comments__c</fullName>
        <inlineHelpText>Please explain why you chose this score for your SunPower Dealer.</inlineHelpText>
        <label>Advocacy for Partner Comments</label>
        <length>2000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Advocacy_for_Partner__c</fullName>
        <inlineHelpText>How likely are you to recommend your SunPower Dealer / Installer to a friend or family member? (0-10 scale)</inlineHelpText>
        <label>Advocacy for Partner</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Advocacy_for_SPWR_Comments_EN__c</fullName>
        <description>English translation.</description>
        <inlineHelpText>English Translation</inlineHelpText>
        <label>Advocacy for SPWR Comments - EN</label>
        <length>2500</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Advocacy_for_SPWR_Comments__c</fullName>
        <inlineHelpText>Please explain why you chose this score for SunPower.</inlineHelpText>
        <label>Advocacy for SPWR Comments</label>
        <length>2000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Advocacy_for_SunPower__c</fullName>
        <inlineHelpText>How likely are you to recommend SunPower to a friend or family member? (0-10 scale)</inlineHelpText>
        <label>Advocacy for SunPower</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Aggregate_Score_New__c</fullName>
        <formula>IF(ISNULL(Partner_Expectations__c),(100*(( IF( AND( NOT( ISNULL(Partner_Service__c)),Partner_Service__c  &gt;= 4),1,0 ) + 
IF( AND(NOT( ISNULL ( Sales_and_Quotation_process__c)),
Sales_and_Quotation_process__c  &gt;= 4),1,0 ) +
IF( AND ( NOT( ISNULL (Proposal_Clarity_and_Detail__c)),
Proposal_Clarity_and_Detail__c  &gt;= 4),1,0)+IF(AND(	NOT(ISNULL (Installation_Process__c)),Installation_Process__c  &gt;= 4),1,0)+
IF(AND(NOT(ISNULL(Intallation_Time_Length__c)	),
Intallation_Time_Length__c  &gt;= 4),1,0)
 )
 /
 (IF( NOT( ISNULL(Partner_Service__c)),1,0 ) 
   +
    IF(NOT(ISNULL(Sales_and_Quotation_process__c)),1,0 )
   +
   IF(	NOT(ISNULL(Proposal_Clarity_and_Detail__c)),1,0)
   +
   IF(	NOT(ISNULL(Installation_Process__c)  ),1,0 )
   +
   IF(NOT(ISNULL(Intallation_Time_Length__c)),1,0  )
)))

,(100*((
IF( AND( NOT( ISNULL(Advocacy_for_Partner__c)),Advocacy_for_Partner__c  &gt; 6 ),1,0 ) + 
IF( AND(NOT( ISNULL ( Partner_Expectations__c)),Partner_Expectations__c  &gt; 6),1,0 ) +
IF( AND ( NOT( ISNULL (Partner_Commitments__c)),Partner_Commitments__c  &gt; 6),1,0)+
IF(AND(	NOT(ISNULL (Partner_Responsiveness__c)),Partner_Responsiveness__c  &gt; 6),1,0)+
IF(AND(NOT(ISNULL(Partner_Communications__c)	),Partner_Communications__c  &gt; 6),1,0)+
IF(AND(	NOT(ISNULL (Sales_Needs__c)),Sales_Needs__c  &gt; 6),1,0)+
IF(AND(NOT(ISNULL(Sales_Knowledge__c)	),Sales_Knowledge__c  &gt; 6),1,0)+
IF(AND(	NOT(ISNULL (Sales_Answers__c)),Sales_Answers__c  &gt; 6),1,0)+
IF(AND(NOT(ISNULL(Proposal_Clarity_and_Detail__c)	),Proposal_Clarity_and_Detail__c  &gt; 6),1,0)+
IF(AND(	NOT(ISNULL (System_Design__c)),System_Design__c  &gt; 6),1,0)+
IF(AND(NOT(ISNULL(Installation_Process__c)	),Installation_Process__c  &gt; 6),1,0)+
IF(AND(	NOT(ISNULL (Courtesy_Respect__c)),Courtesy_Respect__c  &gt; 6),1,0)+
IF(AND(NOT(ISNULL(System_Quality__c)	),
System_Quality__c  &gt; 6),1,0)
 )
 /
 13
 )
 )
 )</formula>
        <inlineHelpText>Calculation is based on &apos;Advocacy for Partner&apos; and 12 questions above Partner Relationship, Sales, and Installation phases (0-100 scale)</inlineHelpText>
        <label>Aggregate Score New</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Aggregate_Score__c</fullName>
        <label>Aggregate Score</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CM_Satisfaction_Text__c</fullName>
        <description>Commercial:
Field added as part of new Commercial Customer Survey
WW39 - 2016
PO: Miltos Vratimos</description>
        <inlineHelpText>Why did you give that rating?</inlineHelpText>
        <label>CM Satisfaction Text</label>
        <length>2000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>CM_Satisfaction__c</fullName>
        <description>Commercial:
Field added as part of new Commercial Customer Survey
WW39 - 2016
PO: Miltos Vratimos</description>
        <inlineHelpText>Satisfaction with Overall onsite construction management (onsite team)?  (0 = Very Dissatisfied to 5 = Very Satisfied)</inlineHelpText>
        <label>CM Satisfaction</label>
        <picklist>
            <picklistValues>
                <fullName>0</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Cash__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Cash</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Change_Order_Process__c</fullName>
        <description>Commercial:
Field added as part of new Commercial Customer Survey
WW39 - 2016
PO: Miltos Vratimos</description>
        <inlineHelpText>Change Order Process</inlineHelpText>
        <label>Change Order Process</label>
        <picklist>
            <picklistValues>
                <fullName>0</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>6</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>7</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>8</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>9</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>10</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Charter_for_Success_Text__c</fullName>
        <description>Commercial:
Field added as part of new Commercial Customer Survey
WW39 - 2016
PO: Miltos Vratimos</description>
        <inlineHelpText>Why/Why not?</inlineHelpText>
        <label>Charter for Success Text</label>
        <length>2000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Charter_for_Success__c</fullName>
        <description>Commercial:
Field added as part of new Commercial Customer Survey
WW39 - 2016
PO: Miltos Vratimos</description>
        <inlineHelpText>Do you feel you adequately had a “charter for success” established with the EPC team? (E.G., Define success in advance)  (0 = Very Dissatisfied to 5 = Very Satisfied)</inlineHelpText>
        <label>Charter for Success</label>
        <picklist>
            <picklistValues>
                <fullName>0</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Clarity__c</fullName>
        <description>Commercial:
Field added as part of new Commercial Customer Survey
WW39 - 2016
PO: Miltos Vratimos</description>
        <inlineHelpText>Clarity of reports or notifications of completed work</inlineHelpText>
        <label>Clarity</label>
        <picklist>
            <picklistValues>
                <fullName>0</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>6</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>7</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>8</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>9</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>10</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Closeout_Process_Text__c</fullName>
        <description>Commercial: 
Field added as part of new Commercial Customer Survey
WW39 - 2016
PO: Miltos Vratimos</description>
        <inlineHelpText>Why?</inlineHelpText>
        <label>Closeout Process Text</label>
        <length>2000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Closeout_Process__c</fullName>
        <description>Commercial: 
Field added as part of new Commercial Customer Survey
WW39 - 2016
PO: Miltos Vratimos</description>
        <inlineHelpText>How satisfied are you with the closeout process of your substantially completed projects? (0 = Very Dissatisfied to 5 = Very Satisfied)</inlineHelpText>
        <label>Closeout Process</label>
        <picklist>
            <picklistValues>
                <fullName>0</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Commissioning_process__c</fullName>
        <description>Commercial:
Field added as part of new Commercial Customer Survey
WW39 - 2016
PO: Miltos Vratimos</description>
        <inlineHelpText>Commissioning Process</inlineHelpText>
        <label>Commissioning process</label>
        <picklist>
            <picklistValues>
                <fullName>0</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>6</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>7</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>8</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>9</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>10</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Communication_Updates_Text__c</fullName>
        <description>Commercial:
Field added as part of new Commercial Customer Survey
WW39 - 2016
PO: Miltos Vratimos</description>
        <inlineHelpText>Why?</inlineHelpText>
        <label>Communication &amp; Updates Text</label>
        <length>2000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Communication_Updates__c</fullName>
        <description>Commercial:
Field added as part of new Commercial Customer Survey
WW39 - 2016
PO: Miltos Vratimos</description>
        <inlineHelpText>How satisfied are you with the communication and status updates throughout the construction phase? (0 = Very Dissatisfied to 5 = Very Satisfied)</inlineHelpText>
        <label>Communication &amp; Updates</label>
        <picklist>
            <picklistValues>
                <fullName>0</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Communication__c</fullName>
        <description>Commercial:
Field added as part of new Commercial Customer Survey
WW39 - 2016
PO: Miltos Vratimos</description>
        <inlineHelpText>Communication and status updates by SunPower</inlineHelpText>
        <label>Communication</label>
        <picklist>
            <picklistValues>
                <fullName>0</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>6</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>7</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>8</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>9</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>10</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Completed_Date_Time__c</fullName>
        <description>Commercial:
Field added as part of new Commercial Customer Survey
WW39 - 2016
PO: Miltos Vratimos</description>
        <label>Completed Date/Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Customer Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Customer Survey Results</relationshipLabel>
        <relationshipName>Customer_Survey_Results</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Contract_Negotiation__c</fullName>
        <description>Commercial:
Field added as part of new Commercial Customer Survey
WW39 - 2016
PO: Miltos Vratimos</description>
        <inlineHelpText>Contract negotiation process</inlineHelpText>
        <label>Contract Negotiation</label>
        <picklist>
            <picklistValues>
                <fullName>0</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>6</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>7</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>8</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>9</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>10</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Courtesy_Respect__c</fullName>
        <inlineHelpText>Installation crew&apos;s courtesy and respect</inlineHelpText>
        <label>Courtesy &amp; Respect</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Customer_Installation_Comments__c</fullName>
        <label>Customer Installation Comments</label>
        <length>2000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Customer_Sat_Survey_Opt_In__c</fullName>
        <formula>IF( Opportunity_ID__r.Customer_Satisfaction_survey_opt_in__c == True, &quot;True&quot;, &quot;False&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Customer Sat Survey Opt In</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Design_Construction_Comments__c</fullName>
        <description>Commercial:
Field added as part of the new Commercial Customer Survey
WW39 - 2016
PO: Miltos Vratimos</description>
        <inlineHelpText>Please enter any additional comments about Design and Construction.</inlineHelpText>
        <label>Design/Construction Comments</label>
        <length>5000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Design_Fulfilled_Text__c</fullName>
        <description>Commercial:
Field added as part of new Commercial Customer Survey
WW39 - 2016
PO: Miltos Vratimos</description>
        <inlineHelpText>Why?</inlineHelpText>
        <label>Design Fulfilled Text</label>
        <length>2000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Design_Fulfilled__c</fullName>
        <description>Commercial:
Field added as part of new Commercial Customer Survey
WW39 - 2016
PO: Miltos Vratimos</description>
        <inlineHelpText>How satisfied are you with SunPower fulfilling your stated design requirements?  (0 = Very Dissatisfied to 5 = Very Satisfied)</inlineHelpText>
        <label>Design Fulfilled</label>
        <picklist>
            <picklistValues>
                <fullName>0</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Design_Review_ApprovalText__c</fullName>
        <description>Commercial:
Field added as part of new Commercial Customer Survey
WW39 - 2016
PO: Miltos Vratimos</description>
        <inlineHelpText>Why?</inlineHelpText>
        <label>Design Review Approval Text</label>
        <length>2000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Design_Review_Approval__c</fullName>
        <description>Commercial:
Field added as part of new Commercial Customer Survey
WW39 - 2016
PO: Miltos Vratimos</description>
        <inlineHelpText>To what degree are you satisfied with the opportunity to review and provide input on the final design of your project?  (0 = Very Dissatisfied to 5 = Very Satisfied)</inlineHelpText>
        <label>Design Review Approval</label>
        <picklist>
            <picklistValues>
                <fullName>0</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Detractor_Concern__c</fullName>
        <label>Detractor Concern</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Ease_of_Checking_Portfolio__c</fullName>
        <description>Commercial:
Field added as part of new Commercial Customer Survey
WW39 - 2016
PO: Miltos Vratimos</description>
        <inlineHelpText>Ease of checking portfolio performance</inlineHelpText>
        <label>Ease of Checking Portfolio</label>
        <picklist>
            <picklistValues>
                <fullName>0</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>6</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>7</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>8</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>9</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>10</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Ease_of_Checking_System__c</fullName>
        <description>Commercial:
Field added as part of new Commercial Customer Survey
WW39 - 2016
PO: Miltos Vratimos</description>
        <inlineHelpText>Ease of checking individual system performance in real time</inlineHelpText>
        <label>Ease of Checking System</label>
        <picklist>
            <picklistValues>
                <fullName>0</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>6</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>7</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>8</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>9</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>10</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Ease_of_Doing_Business_Comments_SPWR__c</fullName>
        <description>Commercial:
Field added as part of new Commercial Customer Survey
WW39 - 2016
PO: Miltos Vratimos</description>
        <inlineHelpText>Why did you give that rating?</inlineHelpText>
        <label>Ease of Doing Business Comments - SPWR</label>
        <length>2000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Ease_of_Doing_Business_EPC__c</fullName>
        <description>Commercial:
Field added as part of new Commercial Customer Survey
WW39 - 2016
PO: Miltos Vratimos</description>
        <inlineHelpText>Please rate the ease of doing business with SunPower. (0 = Extremely difficult to 10 = Extremely easy)</inlineHelpText>
        <label>Ease of Doing Business - EPC</label>
        <picklist>
            <picklistValues>
                <fullName>0</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>6</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>7</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>8</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>9</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>10</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Ease_of_Doing_Business_SPWR__c</fullName>
        <description>Commercial:
Field added as part of new Commercial Customer Survey (field is duplicate, but they requested different help text and were not willing to compromise)
WW39 - 2016
PO: Miltos Vratimos</description>
        <inlineHelpText>Please rate the ease of doing business with SunPower. 0 (Extremely Difficult) to 10 (Extremely easy)</inlineHelpText>
        <label>Ease of Doing Business - SPWR</label>
        <picklist>
            <picklistValues>
                <fullName>0</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>6</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>7</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>8</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>9</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>10</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Ease_of_Doing_Business_Text_EPC__c</fullName>
        <description>Commercial:
Added as part of Commercial Customer Survey
WW39 - 2016
PO: Miltos Vratimos</description>
        <inlineHelpText>Why did you give that rating?</inlineHelpText>
        <label>Ease of Doing Business Text - EPC</label>
        <length>2000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Ease_of_business_Dealer__c</fullName>
        <inlineHelpText>I find it easy to do business with SunPower&apos;s Dealer.</inlineHelpText>
        <label>Ease of business - Dealer</label>
        <picklist>
            <picklistValues>
                <fullName>Strongly Disagree</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Disagree</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Neutral</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Agree</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Strongly Agree</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Ease_of_business_SPWR__c</fullName>
        <inlineHelpText>It is easy to do business with SunPower.</inlineHelpText>
        <label>Ease of business - SPWR</label>
        <picklist>
            <picklistValues>
                <fullName>Strongly Disagree</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Disagree</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Neutral</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Agree</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Strongly Agree</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
</CustomObject>